wier/force-app/main/default/objects/RFQ__c/RFQ__c.object-meta.xml
<CustomObject>
    <label>RFQ/PO</label>
    <nameField>
        <displayFormat>WID-{00000000}</displayFormat>
        <label>RFQ/PO ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFQ/PO</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>