wier/force-app/main/default/objects/RFQ__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Status__c</field>
            <operation>notEqual</operation>
            <value>Suspended</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>RFQ1</relationshipName>
    <type>Lookup</type>
</CustomField>