wier/force-app/main/default/objects/RFQ__c/fields/Additional_comments_to_add_in_Aknwlgmt__c.field-meta.xml
<CustomField>
    <fullName>Additional_comments_to_add_in_Aknwlgmt__c</fullName>
    <label>Additional content in acknowledgement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>