wier/force-app/main/default/objects/RFQ__c/fields/CSR__c.field-meta.xml
<CustomField>
    <fullName>CSR__c</fullName>
    <description>Customer Service Representative</description>
    <formula>Account__r.Customer_Service_Representative__r.FirstName +&apos; &apos;+ Account__r.Customer_Service_Representative__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Service Representative</label>
    <type>Text</type>
</CustomField>