wier/force-app/main/default/objects/RFQ__c/fields/Customer_Acknowledgement_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acknowledgement_Name__c</fullName>
    <description>Send acknowledgement to</description>
    <label>Name Of The Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>