wier/force-app/main/default/objects/RFQ__c/fields/Customer_documents_reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_documents_reference__c</fullName>
    <label>Customer documents reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>