wier/force-app/main/default/objects/RFQ__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <label>Email Address Of The Customer</label>
    <type>Email</type>
</CustomField>