wier/force-app/main/default/objects/RFQ__c/fields/Customer_s_reference_in_RFQ__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_reference_in_RFQ__c</fullName>
    <label>Ref. (if any) in customer communication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>