wier/force-app/main/default/objects/RFQ__c/fields/Date_on_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Date_on_Enquiry__c</fullName>
    <label>Date of  receipt from Customer</label>
    <required>true</required>
    <type>Date</type>
</CustomField>