wier/force-app/main/default/objects/RFQ__c/fields/Date_on_Enquiry_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_on_Enquiry_to_Customer__c</fullName>
    <formula>Text(Day( Date_on_Enquiry__c ))+&apos;-&apos;+Text(MONTH( Date_on_Enquiry__c ))+&apos;-&apos;+Text(YEAR( Date_on_Enquiry__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date on Enquiry to Customer</label>
    <type>Text</type>
</CustomField>