wier/force-app/main/default/objects/RFQ__c/fields/Email_Content__c.field-meta.xml
<CustomField>
    <fullName>Email_Content__c</fullName>
    <label>Contents of customer communication</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>