wier/force-app/main/default/objects/RFQ__c/fields/Emailreference__c.field-meta.xml
<CustomField>
    <fullName>Emailreference__c</fullName>
    <formula>if( Not_available__c ==TRUE,&apos;- not available&apos;, Customer_s_reference_in_RFQ__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emailreference</label>
    <type>Text</type>
</CustomField>