wier/force-app/main/default/objects/RFQ__c/fields/End_User_Location__c.field-meta.xml
<CustomField>
    <fullName>End_User_Location__c</fullName>
    <label>End User Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Location1</fullName>
            </value>
            <value>
                <fullName>Location2</fullName>
            </value>
            <value>
                <fullName>Location3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>