wier/force-app/main/default/objects/RFQ__c/fields/Not_available__c.field-meta.xml
<CustomField>
    <fullName>Not_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer did not quote any Ref.</label>
    <type>Checkbox</type>
</CustomField>