wier/force-app/main/default/objects/RFQ__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>opportunity</label>
    <referenceTo>COpportunity__c</referenceTo>
    <relationshipLabel>RFQ/PO</relationshipLabel>
    <relationshipName>RFQ_PO</relationshipName>
    <type>Lookup</type>
</CustomField>