wier/force-app/main/default/objects/RFQ__c/fields/Opportunity_Exist__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Exist</label>
    <type>Checkbox</type>
</CustomField>