wier/force-app/main/default/objects/RFQ__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <label>Key Product / Scope of Enquiry</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>