wier/force-app/main/default/objects/RFQ__c/fields/Quotation__c.field-meta.xml
<CustomField>
    <fullName>Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Quotation__c.COpportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity__c</valueField>
        </filterItems>
        <filterItems>
            <field>Quotation__c.Final__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Quotation__c.COpportunity__r.Quote_approved_date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quotation__c</referenceTo>
    <relationshipLabel>RFQ/PO</relationshipLabel>
    <relationshipName>RFQ_PO</relationshipName>
    <type>Lookup</type>
</CustomField>