wier/force-app/main/default/objects/RFQ__c/fields/Send_an_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Send_an_Acknowledgement__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Acknowledgement to customer</label>
    <type>Checkbox</type>
</CustomField>