wier/force-app/main/default/objects/RFQ__c/fields/Support_Engineer_Email__c.field-meta.xml
<CustomField>
    <fullName>Support_Engineer_Email__c</fullName>
    <label>Customer Support Engineer Email</label>
    <type>Email</type>
</CustomField>