wier/force-app/main/default/objects/RFQ__c/fields/Tendering_Representative__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tendering Representative</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Head of Tendering</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>UK CSR+TM</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Tendering Rep</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Senior Tendering Rep</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>RFQ1</relationshipName>
    <type>Lookup</type>
</CustomField>