wier/force-app/main/default/objects/RFQ__c/fields/Time_of_Email_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Email_Receipt__c</fullName>
    <label>Time of receiving RFQ/PO in email addres</label>
    <type>DateTime</type>
</CustomField>