wier/force-app/main/default/objects/RFQ__c/recordTypes/Customer_PO_Quotation_sent.recordType-meta.xml
<RecordType>
    <fullName>Customer_PO_Quotation_sent</fullName>
    <active>true</active>
    <description>Customer PO (for Quotation sent)</description>
    <label>Customer PO (for Quotation sent)</label>
</RecordType>