wier/force-app/main/default/objects/RFQ__c/recordTypes/PO_Under_Master_Purchase.recordType-meta.xml
<RecordType>
    <fullName>PO_Under_Master_Purchase</fullName>
    <active>true</active>
    <description>PO under Master Purchase Agreement - priced</description>
    <label>PO under Master Purchase Agreement - priced</label>
</RecordType>