wier/force-app/main/default/objects/RFQ__c/recordTypes/RFQ_Email.recordType-meta.xml
<RecordType>
    <fullName>RFQ_Email</fullName>
    <active>true</active>
    <description>RFQ Email</description>
    <label>RFQ Email</label>
</RecordType>