wier/force-app/main/default/objects/RFQ__c/recordTypes/Separate_quotes_for_items_underone_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>Separate_quotes_for_items_underone_Enquiry</fullName>
    <active>true</active>
    <description>Separate quotes for items under one Enquiry</description>
    <label>Separate quotes for items under one Enquiry</label>
</RecordType>