wier/force-app/main/default/objects/RFQ__c/validationRules/Customer_name_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_name_validation</fullName>
    <active>true</active>
    <errorConditionFormula>If(Send_an_Acknowledgement__c==TRUE, If(LEN( Customer_Acknowledgement_Name__c ) !=0,FALSE,TRUE),false)</errorConditionFormula>
    <errorDisplayField>Customer_Acknowledgement_Name__c</errorDisplayField>
    <errorMessage>Please Provide Customer Acknowledgement Name</errorMessage>
</ValidationRule>