wier/force-app/main/default/objects/RFQ__c/validationRules/Customer_Number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Number_validation</fullName>
    <active>true</active>
    <errorConditionFormula>if(AND(Customer_s_reference_in_RFQ__c!=NULL, Not_available__c ==TRUE),TRUE,FALSE)</errorConditionFormula>
    <errorDisplayField>Not_available__c</errorDisplayField>
    <errorMessage>Either enter customer reference or select check box for no reference</errorMessage>
</ValidationRule>