wier/force-app/main/default/objects/RFQ__c/validationRules/customer_reference_valiation_is_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>customer_reference_valiation_is_empty</fullName>
    <active>true</active>
    <errorConditionFormula>if(AND( Customer_s_reference_in_RFQ__c ==NULL, Not_available__c ==FALSE),TRUE,FALSE)</errorConditionFormula>
    <errorDisplayField>Customer_s_reference_in_RFQ__c</errorDisplayField>
    <errorMessage>You have to either enter customer reference or select check box for no reference.</errorMessage>
</ValidationRule>