wier/force-app/main/default/objects/RFQ__c/validationRules/Date_of_email_enquiry_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_email_enquiry_validation</fullName>
    <active>true</active>
    <errorConditionFormula>if(Date_on_Enquiry__c &gt; TODAY(),TRUE,FALSE)</errorConditionFormula>
    <errorDisplayField>Date_on_Enquiry__c</errorDisplayField>
    <errorMessage>Date of email Enquiry must be current or past date.</errorMessage>
</ValidationRule>