wier/force-app/main/default/objects/RFQ__c/validationRules/Time_of_receipt_and_date_of_receipt_vali.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_of_receipt_and_date_of_receipt_vali</fullName>
    <active>false</active>
    <errorConditionFormula>Date_on_Enquiry__c &lt;&gt; DATEVALUE( Time_of_Email_Receipt__c )</errorConditionFormula>
    <errorDisplayField>Time_of_Email_Receipt__c</errorDisplayField>
    <errorMessage>Date entered for &quot;Time of receipt&quot; must be same as &quot;Date of receipt&quot;.</errorMessage>
</ValidationRule>