wier/force-app/main/default/objects/RFQ__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CSR__c</columns>
    <columns>Date_on_Enquiry__c</columns>
    <columns>Time_of_Email_Receipt__c</columns>
    <columns>Account__c</columns>
    <columns>Customer_s_reference_in_RFQ__c</columns>
    <columns>Email_Content__c</columns>
    <columns>Tendering_Manager__c</columns>
    <columns>Send_an_Acknowledgement__c</columns>
    <columns>Customer_Email__c</columns>
    <columns>Tendering_Representative__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>