wier/force-app/main/default/objects/RFQ__c/listViews/Business_Head_Oilfield_DXB_RFQ.listView-meta.xml
<ListView>
    <fullName>Business_Head_Oilfield_DXB_RFQ</fullName>
    <filterScope>Queue</filterScope>
    <label>Business Head - Oilfield DXB</label>
    <queue>Business_Head_Oilfield_DXB</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>