wier/force-app/main/default/objects/RFQ__c/listViews/Head_of_Sales_Oilfield_DXB_RFQ.listView-meta.xml
<ListView>
    <fullName>Head_of_Sales_Oilfield_DXB_RFQ</fullName>
    <filterScope>Queue</filterScope>
    <label>Head of Sales - Oilfld DXB</label>
    <queue>Head_of_Sales_Oilfield_DXB</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>