wier/force-app/main/default/objects/RFQ__c/listViews/Head_of_Turbomachinery_RFQ.listView-meta.xml
<ListView>
    <fullName>Head_of_Turbomachinery_RFQ</fullName>
    <filterScope>Queue</filterScope>
    <label>Head of Turbomachinery</label>
    <queue>Head_of_Turbomachinery</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>